Updated meta tag with viewport scale settings to fix issues with rendering page on mobile devices and smaller screen sizes

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -17,7 +17,21 @@ body {
   //   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 1rem;
   background-color: $black;
+  position: relative;
 }
+
+// #__next {
+//   display: flex;
+//   flex-direction: column;
+//   min-height: 100vh;
+//   min-width: 100vh;
+// }
+
+// @media screen and (max-width: 320px) {
+//   #__next {
+//     display: flex
+//   }
+// }
 
 a {
   color: inherit;
